AdolaDEVMeta/force-app/main/default/objects/SignicatConfig__c/SignicatConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Signicat Config</label>
</CustomObject>