AdolaDEVMeta/force-app/main/default/objects/SignicatConfig__c/fields/Abort_URL__c.field-meta.xml
<CustomField>
    <fullName>Abort_URL__c</fullName>
    <label>Abort URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>