AdolaDEVMeta/force-app/main/default/objects/SignicatConfig__c/fields/Access_Token_2__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_2__c</fullName>
    <label>Access Token Part 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>