AdolaDEVMeta/force-app/main/default/objects/SignicatConfig__c/fields/Access_Token_3__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_3__c</fullName>
    <label>Access Token Part 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>