AdolaDEVMeta/force-app/main/default/objects/SignicatConfig__c/fields/AES_Key__c.field-meta.xml
<CustomField>
    <fullName>AES_Key__c</fullName>
    <label>AES Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>