AdolaDEVMeta/force-app/main/default/objects/SignicatConfig__c/fields/Error_URL__c.field-meta.xml
<CustomField>
    <fullName>Error_URL__c</fullName>
    <label>Error URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>