AdolaDEVMeta/force-app/main/default/objects/SignicatConfig__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <label>Expires At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>