AdolaDEVMeta/force-app/main/default/objects/SignicatConfig__c/fields/Success_URL__c.field-meta.xml
<CustomField>
    <fullName>Success_URL__c</fullName>
    <label>Success URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>